@@ -22,6 +22,8 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import org.apache.lucene.codecs.Codec;
+import org.apache.lucene.codecs.lucene90.Lucene90DocValuesFormat;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.LongPoint;
@@ -31,6 +33,7 @@ import org.apache.lucene.document.SortedNumericDocValuesField;
 import org.apache.lucene.document.SortedSetDocValuesField;
 import org.apache.lucene.document.StringField;
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.IndexWriterConfig;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.tests.index.RandomIndexWriter;
@@ -42,24 +45,80 @@ import org.apache.lucene.util.NumericUtils;
 
 public class TestDocValuesQueries extends LuceneTestCase {
 
+  private Codec getCodec() {
+    // small interval size to test with many intervals
+    return TestUtil.alwaysDocValuesFormat(new Lucene90DocValuesFormat(random().nextInt(4, 16)));
+  }
+
   public void testDuelPointRangeSortedNumericRangeQuery() throws IOException {
-    doTestDuelPointRangeNumericRangeQuery(true, 1);
+    doTestDuelPointRangeNumericRangeQuery(true, 1, false);
+  }
+
+  public void testDuelPointRangeSortedNumericRangeWithSlipperQuery() throws IOException {
+    doTestDuelPointRangeNumericRangeQuery(true, 1, true);
   }
 
   public void testDuelPointRangeMultivaluedSortedNumericRangeQuery() throws IOException {
-    doTestDuelPointRangeNumericRangeQuery(true, 3);
+    doTestDuelPointRangeNumericRangeQuery(true, 3, false);
+  }
+
+  public void testDuelPointRangeMultivaluedSortedNumericRangeWithSkipperQuery() throws IOException {
+    doTestDuelPointRangeNumericRangeQuery(true, 3, true);
   }
 
   public void testDuelPointRangeNumericRangeQuery() throws IOException {
-    doTestDuelPointRangeNumericRangeQuery(false, 1);
+    doTestDuelPointRangeNumericRangeQuery(false, 1, false);
   }
 
-  private void doTestDuelPointRangeNumericRangeQuery(boolean sortedNumeric, int maxValuesPerDoc)
-      throws IOException {
+  public void testDuelPointRangeNumericRangeWithSkipperQuery() throws IOException {
+    doTestDuelPointRangeNumericRangeQuery(false, 1, true);
+  }
+
+  public void testDuelPointNumericSortedWithSkipperRangeQuery() throws IOException {
+    Directory dir = newDirectory();
+    IndexWriterConfig config = new IndexWriterConfig().setCodec(getCodec());
+    config.setIndexSort(new Sort(new SortField("dv", SortField.Type.LONG, random().nextBoolean())));
+    RandomIndexWriter iw = new RandomIndexWriter(random(), dir, config);
+    final int numDocs = atLeast(1000);
+    for (int i = 0; i < numDocs; ++i) {
+      Document doc = new Document();
+      final long value = TestUtil.nextLong(random(), -100, 10000);
+      doc.add(NumericDocValuesField.indexedField("dv", value));
+      doc.add(new LongPoint("idx", value));
+      iw.addDocument(doc);
+    }
+
+    final IndexReader reader = iw.getReader();
+    final IndexSearcher searcher = newSearcher(reader, false);
+    iw.close();
+
+    for (int i = 0; i < 100; ++i) {
+      final long min =
+          random().nextBoolean() ? Long.MIN_VALUE : TestUtil.nextLong(random(), -100, 10000);
+      final long max =
+          random().nextBoolean() ? Long.MAX_VALUE : TestUtil.nextLong(random(), -100, 10000);
+      final Query q1 = LongPoint.newRangeQuery("idx", min, max);
+      final Query q2 = NumericDocValuesField.newSlowRangeQuery("dv", min, max);
+      assertSameMatches(searcher, q1, q2, false);
+    }
+    reader.close();
+    dir.close();
+  }
+
+  private void doTestDuelPointRangeNumericRangeQuery(
+      boolean sortedNumeric, int maxValuesPerDoc, boolean skypper) throws IOException {
     final int iters = atLeast(10);
     for (int iter = 0; iter < iters; ++iter) {
       Directory dir = newDirectory();
-      RandomIndexWriter iw = new RandomIndexWriter(random(), dir);
+      RandomIndexWriter iw;
+      if (sortedNumeric || random().nextBoolean()) {
+        iw = new RandomIndexWriter(random(), dir);
+      } else {
+        IndexWriterConfig config = new IndexWriterConfig().setCodec(getCodec());
+        config.setIndexSort(
+            new Sort(new SortField("dv", SortField.Type.LONG, random().nextBoolean())));
+        iw = new RandomIndexWriter(random(), dir, config);
+      }
       final int numDocs = atLeast(100);
       for (int i = 0; i < numDocs; ++i) {
         Document doc = new Document();
@@ -67,9 +126,17 @@ public class TestDocValuesQueries extends LuceneTestCase {
         for (int j = 0; j < numValues; ++j) {
           final long value = TestUtil.nextLong(random(), -100, 10000);
           if (sortedNumeric) {
-            doc.add(new SortedNumericDocValuesField("dv", value));
+            if (skypper) {
+              doc.add(SortedNumericDocValuesField.indexedField("dv", value));
+            } else {
+              doc.add(new SortedNumericDocValuesField("dv", value));
+            }
           } else {
-            doc.add(new NumericDocValuesField("dv", value));
+            if (skypper) {
+              doc.add(NumericDocValuesField.indexedField("dv", value));
+            } else {
+              doc.add(new NumericDocValuesField("dv", value));
+            }
           }
           doc.add(new LongPoint("idx", value));
         }
@@ -102,12 +169,20 @@ public class TestDocValuesQueries extends LuceneTestCase {
     }
   }
 
-  private void doTestDuelPointRangeSortedRangeQuery(boolean sortedSet, int maxValuesPerDoc)
-      throws IOException {
+  private void doTestDuelPointRangeSortedRangeQuery(
+      boolean sortedSet, int maxValuesPerDoc, boolean skypper) throws IOException {
     final int iters = atLeast(10);
     for (int iter = 0; iter < iters; ++iter) {
       Directory dir = newDirectory();
-      RandomIndexWriter iw = new RandomIndexWriter(random(), dir);
+      RandomIndexWriter iw;
+      if (sortedSet || random().nextBoolean()) {
+        iw = new RandomIndexWriter(random(), dir);
+      } else {
+        IndexWriterConfig config = new IndexWriterConfig().setCodec(getCodec());
+        config.setIndexSort(
+            new Sort(new SortField("dv", SortField.Type.STRING, random().nextBoolean())));
+        iw = new RandomIndexWriter(random(), dir, config);
+      }
       final int numDocs = atLeast(100);
       for (int i = 0; i < numDocs; ++i) {
         Document doc = new Document();
@@ -117,9 +192,17 @@ public class TestDocValuesQueries extends LuceneTestCase {
           byte[] encoded = new byte[Long.BYTES];
           LongPoint.encodeDimension(value, encoded, 0);
           if (sortedSet) {
-            doc.add(new SortedSetDocValuesField("dv", newBytesRef(encoded)));
+            if (skypper) {
+              doc.add(SortedSetDocValuesField.indexedField("dv", newBytesRef(encoded)));
+            } else {
+              doc.add(new SortedSetDocValuesField("dv", newBytesRef(encoded)));
+            }
           } else {
-            doc.add(new SortedDocValuesField("dv", newBytesRef(encoded)));
+            if (skypper) {
+              doc.add(SortedDocValuesField.indexedField("dv", newBytesRef(encoded)));
+            } else {
+              doc.add(new SortedDocValuesField("dv", newBytesRef(encoded)));
+            }
           }
           doc.add(new LongPoint("idx", value));
         }
@@ -179,15 +262,79 @@ public class TestDocValuesQueries extends LuceneTestCase {
   }
 
   public void testDuelPointRangeSortedSetRangeQuery() throws IOException {
-    doTestDuelPointRangeSortedRangeQuery(true, 1);
+    doTestDuelPointRangeSortedRangeQuery(true, 1, false);
+  }
+
+  public void testDuelPointRangeSortedSetRangeSkipperQuery() throws IOException {
+    doTestDuelPointRangeSortedRangeQuery(true, 1, true);
   }
 
   public void testDuelPointRangeMultivaluedSortedSetRangeQuery() throws IOException {
-    doTestDuelPointRangeSortedRangeQuery(true, 3);
+    doTestDuelPointRangeSortedRangeQuery(true, 3, false);
+  }
+
+  public void testDuelPointRangeMultivaluedSortedSetRangeSkipperQuery() throws IOException {
+    doTestDuelPointRangeSortedRangeQuery(true, 3, true);
   }
 
   public void testDuelPointRangeSortedRangeQuery() throws IOException {
-    doTestDuelPointRangeSortedRangeQuery(false, 1);
+    doTestDuelPointRangeSortedRangeQuery(false, 1, false);
+  }
+
+  public void testDuelPointRangeSortedRangeSkipperQuery() throws IOException {
+    doTestDuelPointRangeSortedRangeQuery(false, 1, true);
+  }
+
+  public void testDuelPointSortedSetSortedWithSkipperRangeQuery() throws IOException {
+    Directory dir = newDirectory();
+    IndexWriterConfig config = new IndexWriterConfig().setCodec(getCodec());
+    config.setIndexSort(
+        new Sort(new SortField("dv", SortField.Type.STRING, random().nextBoolean())));
+    RandomIndexWriter iw = new RandomIndexWriter(random(), dir, config);
+    final int numDocs = atLeast(1000);
+    for (int i = 0; i < numDocs; ++i) {
+      Document doc = new Document();
+      final long value = TestUtil.nextLong(random(), -100, 10000);
+      byte[] encoded = new byte[Long.BYTES];
+      LongPoint.encodeDimension(value, encoded, 0);
+      doc.add(SortedDocValuesField.indexedField("dv", newBytesRef(encoded)));
+      doc.add(new LongPoint("idx", value));
+      iw.addDocument(doc);
+    }
+
+    final IndexReader reader = iw.getReader();
+    final IndexSearcher searcher = newSearcher(reader, false);
+    iw.close();
+
+    for (int i = 0; i < 100; ++i) {
+      long min = random().nextBoolean() ? Long.MIN_VALUE : TestUtil.nextLong(random(), -100, 10000);
+      long max = random().nextBoolean() ? Long.MAX_VALUE : TestUtil.nextLong(random(), -100, 10000);
+      byte[] encodedMin = new byte[Long.BYTES];
+      byte[] encodedMax = new byte[Long.BYTES];
+      LongPoint.encodeDimension(min, encodedMin, 0);
+      LongPoint.encodeDimension(max, encodedMax, 0);
+      boolean includeMin = true;
+      boolean includeMax = true;
+      if (random().nextBoolean()) {
+        includeMin = false;
+        min++;
+      }
+      if (random().nextBoolean()) {
+        includeMax = false;
+        max--;
+      }
+      final Query q1 = LongPoint.newRangeQuery("idx", min, max);
+      final Query q2 =
+          SortedDocValuesField.newSlowRangeQuery(
+              "dv",
+              min == Long.MIN_VALUE && random().nextBoolean() ? null : newBytesRef(encodedMin),
+              max == Long.MAX_VALUE && random().nextBoolean() ? null : newBytesRef(encodedMax),
+              includeMin,
+              includeMax);
+      assertSameMatches(searcher, q1, q2, false);
+    }
+    reader.close();
+    dir.close();
   }
 
   private void assertSameMatches(IndexSearcher searcher, Query q1, Query q2, boolean scores)
